--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
   repositories {
     google()
     maven { url 'https://plugins.gradle.org/m2' }
+    maven { url 'https://jitpack.io' }
   }
 
   group = GROUP
