--- a/gradle/developer-config.gradle
+++ b/gradle/developer-config.gradle
@@ -5,21 +5,20 @@
 task accessToken {
     def tokenFile = new File("${projectDir}/src/main/res/values/developer-config.xml")
     if (!tokenFile.exists()) {
-        String mapboxAccessToken = "$System.env.MAPBOX_ACCESS_TOKEN"
+        String mapboxAccessToken = "$System.env.GRAPHHOPPER_API_KEY"
         if (mapboxAccessToken == "null") {
-            System.out.println("You should set the MAPBOX_ACCESS_TOKEN environment variable.")
-            mapboxAccessToken = "YOUR_MAPBOX_ACCESS_TOKEN_GOES_HERE"
+            System.out.println("You can set the GRAPHHOPPER_API_KEY environment variable.")
+            mapboxAccessToken = "GRAPHHOPPER_API_KEY"
         }
         String tokenFileContents = "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
                 "<resources>\n" +
-                "    <!-- Your navigation base url (example: https://api.mapbox.com) (-->\n" +
-                "    <string name=\"base_url\" translatable=\"false\">https://api.mapbox.com</string>\n" +
-                "    <!-- Your Mapbox access token (example: pk.abc...) -->\n" +
+                "    <string name=\"base_url\" translatable=\"false\">https://graphhopper.com/api/1/navigate/</string>" +
+                "    <!-- Your GraphHopper API key -->\n" +
                 "    <string name=\"mapbox_access_token\" translatable=\"false\">" + mapboxAccessToken + "</string>\n" +
-                "    <!-- Map tile provider for light design (example: https://api.maptiler.com/maps/basic-v2/style.json?key=...) -->\n" +
-                "    <string name=\"map_style_light\" translatable=\"false\"></string>\n" +
-                "    <!-- Map tile provider for dark design (example: \"https://api.maptiler.com/maps/basic-v2-dark/style.json?key=...) -->\n" +
-                "    <string name=\"map_style_dark\" translatable=\"false\"></string>\n" +
+                "    <!-- The \"day\" style used for navigation, here mapilion is used but you can use maptiler too -->\n" +
+                "    <string name=\"map_style_light\" translatable=\"false\">https://tiles.mapilion.com/assets/osm-bright/style.json?key=MAPTILER_API_KEY</string>\n" +
+                "    <!-- The \"night\" style used for navigation -->\n" +
+                "    <string name=\"map_style_dark\" translatable=\"false\">https://tiles.mapilion.com/assets/dark-matter/style.json?key=MAPTILER_API_KEY</string>\n" +
                 "</resources>"
         tokenFile.write(tokenFileContents)
     }
